This is a nasty bug. The problem is that QString("%1, %2").arg("ab%2").arg("cd"); results in "abcd, %2", so this patch changes it in QString("%1, %2").arg("ab%2", "cd") which should fix this problem. Please check your konsole for errors and better save then sorry: backup your digikam3.db.

CCMAIL: digikam-devel@kde.org
BUG: 109355

svn path=/trunk/extragear/graphics/digikam/; revision=436849